--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -99,9 +99,11 @@ body .body-content #display {
   width: 100%;
   max-width: 50em;
   margin: 0 0 2em;
+  font-size: 1rem;
 }
 body .body-content #display h1 {
   color: #c7c7c7;
+  font-size: 4rem;
 }
 body .body-content #display #btn {
   padding: 1em;
