--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -7,6 +7,8 @@
 html{
     font-size: 62.5%;
 }
+
+
 :root{
     --main-color:rgb(28, 28, 28);
     --border-color: rgb(92, 92, 92);
@@ -105,9 +107,11 @@ body{
             width: 100%;
             max-width: 50em;
             margin: 0 0 2em;
+            font-size: 1rem;
 
             h1{
                 color: #c7c7c7;
+                font-size: 4rem;
             }
             #btn{
                 padding: 1em;
